bat.bool1.diff21.Diff21.scala.error
Compilation error:
Diff21:4: error: not found: value Maths
  return Maths(21 - n)
         ^